--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,4 +32,5 @@
     <string name="dashboard">Cuadro de mandos</string>
     <string name="add_story">Añadir historia</string>
     <string name="story_detail">Detalle de la historia</string>
+    <string name="incorrect_password_length">La contraseña debe tener al menos 8 caracteres!</string>
 </resources>
