--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="form_empty_message">This field can\'t be empty!</string>
     <string name="incorrect_email_format">Incorrect email format!</string>
     <string name="incorrect_email_or_password">Incorrect email or password!</string>
+    <string name="incorrect_password_length">Password must be at least 8 characters!</string>
     <string name="email_already_used">The email has been used!</string>
     <string name="register_success">Register successfully</string>
     <string name="login_success">Login successfully</string>
