refactor(general): Clean all code from unused code and import

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,4 +33,6 @@
     <string name="add_story">Añadir historia</string>
     <string name="story_detail">Detalle de la historia</string>
     <string name="incorrect_password_length">La contraseña debe tener al menos 8 caracteres!</string>
+    <string name="image_story">Imágenes de la historia</string>
+    <string name="images_preview">Avance de imágenes</string>
 </resources>
