--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -33,4 +33,6 @@
     <string name="add_story">스토리 추가</string>
     <string name="story_detail">스토리 세부 정보</string>
     <string name="incorrect_password_length">비밀번호는 8자 이상이어야 합니다!</string>
+    <string name="image_story">스토리의 이미지</string>
+    <string name="images_preview">이미지 미리보기</string>
 </resources>
