--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="dashboard">Dashboard</string>
     <string name="add_story">Add Story</string>
     <string name="story_detail">Story Detail</string>
+    <string name="image_story">Images on the Story</string>
+    <string name="images_preview">Images Preview</string>
 </resources>
