--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,4 +35,5 @@
     <string name="incorrect_password_length">Le mot de passe doit comporter au moins 8 caractères!</string>
     <string name="image_story">Images sur l\'histoire</string>
     <string name="images_preview">Aperçu des images</string>
+    <string name="menu_maps">Cartes</string>
 </resources>
