--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -35,4 +35,5 @@
     <string name="incorrect_password_length">Kata sandi minimal harus terdiri dari 8 karakter!</string>
     <string name="image_story">Gambar pada Cerita</string>
     <string name="images_preview">Pratinjau Gambar</string>
+    <string name="menu_maps">Peta</string>
 </resources>
