--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -35,4 +35,5 @@
     <string name="incorrect_password_length">비밀번호는 8자 이상이어야 합니다!</string>
     <string name="image_story">스토리의 이미지</string>
     <string name="images_preview">이미지 미리보기</string>
+    <string name="menu_maps">맵</string>
 </resources>
