feat(story): Add endless feature

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -36,4 +36,5 @@
     <string name="image_story">Imágenes de la historia</string>
     <string name="images_preview">Avance de imágenes</string>
     <string name="menu_maps">Mapas</string>
+    <string name="retry">Reintentar</string>
 </resources>
