--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -36,4 +36,5 @@
     <string name="image_story">Images sur l\'histoire</string>
     <string name="images_preview">Aperçu des images</string>
     <string name="menu_maps">Cartes</string>
+    <string name="retry">Réessayer</string>
 </resources>
