--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -36,4 +36,5 @@
     <string name="image_story">Gambar pada Cerita</string>
     <string name="images_preview">Pratinjau Gambar</string>
     <string name="menu_maps">Peta</string>
+    <string name="retry">Coba Lagi</string>
 </resources>
