--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -36,4 +36,5 @@
     <string name="image_story">스토리의 이미지</string>
     <string name="images_preview">이미지 미리보기</string>
     <string name="menu_maps">맵</string>
+    <string name="retry">다시</string>
 </resources>
