--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="image_story">Images on the Story</string>
     <string name="images_preview">Images Preview</string>
     <string name="menu_maps">Maps</string>
+    <string name="retry">Retry</string>
 </resources>
