--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -37,4 +37,6 @@
     <string name="images_preview">Pratinjau Gambar</string>
     <string name="menu_maps">Peta</string>
     <string name="retry">Coba Lagi</string>
+    <string name="location_not_found">Lokasi tidak ditemukan. Coba Lagi!</string>
+    <string name="include_current_location">Sertakan lokasi Anda saat ini?</string>
 </resources>
