--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -37,4 +37,6 @@
     <string name="images_preview">이미지 미리보기</string>
     <string name="menu_maps">맵</string>
     <string name="retry">다시</string>
+    <string name="location_not_found">위치를 찾을 수 없습니다. 다시 시도하세요!</string>
+    <string name="include_current_location">현재 위치를 포함하시겠습니까?</string>
 </resources>
